# alterschema

./: .ackrc  .gitignore  Brewfile  CHANGELOG.markdown  CMakeLists.txt  CNAME  DEPENDENCIES  Makefile  README.markdown  config.cmake.in  main.css  main.js  main.js.LICENSE.txt  metaschemas.json  package-lock.json  package.json  tsconfig.json  vendorpull.mask
.github/workflows/: ci.yml  codeql-analysis.yml  legacy-ci.yml  legacy-deploy.yml  test.yml  website-deploy.yml
bindings/node/: builtin.js  cli.js  index.js  jsonschema.js  test.js  walker.js
cmake/: FindGoogleTest.cmake  FindJSONToolkit.cmake  FindNoa.cmake
legacy/: Makefile  metaschemas.json
legacy/bindings/node/: cli.js
legacy/rules/: jsonschema-2019-09-to-2020-12.json  jsonschema-draft3-to-draft3.json  jsonschema-draft4-to-draft6.json  jsonschema-draft6-to-draft7.json  jsonschema-draft7-to-2019-09.json
legacy/schemas/: rule-test.json  rule.json  walker.json
legacy/test/rules/: jsonschema-draft3-to-draft4.json  jsonschema-draft4-to-2020-12.json  jsonschema-draft4-to-draft6.json  jsonschema-draft4-to-draft7.json  jsonschema-draft6-to-2020-12.json  jsonschema-draft6-to-draft7.json  jsonschema-draft7-to-2019-09.json  jsonschema-draft7-to-2020-12.json
legacy/test/walkers/: jsonschema-2019-09.json  jsonschema-draft3.json  jsonschema-draft6.json  jsonschema-draft7.json
legacy/walkers/: jsonschema-draft3.json  jsonschema-draft4.json  jsonschema-draft7.json
legacy/www/: main.scss  webpack.config.dev.js
lib/: builtin.js  index.js  index.ts  json.d.ts  jsonschema.d.ts  jsonschema.js  jsonschema.ts  schema.d.ts  transformer.js  transformer.ts  utils.ts  walker.js
lib/rules/: jsonschema-2019-09-to-2020-12.js  jsonschema-2019-09-to-2020-20.ts  rule.d.ts
lib/walkers/: jsonschema-2019-09.js  jsonschema-2019-09.ts  utils.js  utils.ts  walker.d.ts
rules/: jsonschema-2019-09-to-2019-09.json  jsonschema-2019-09-to-2020-12.js  jsonschema-2019-09-to-2020-12.json  jsonschema-2020-12-to-2020-12.json  jsonschema-draft3-to-draft4.json  jsonschema-draft4-to-draft4.json  jsonschema-draft4-to-draft6.json  jsonschema-draft6-to-draft6.json  jsonschema-draft6-to-draft7.json  jsonschema-draft7-to-2019-09.json  jsonschema-draft7-to-draft7.json
schemas/: walker-test.json
src/engine/: CMakeLists.txt
src/engine/include/sourcemeta/alterschema/: engine.h
src/linter/: CMakeLists.txt  linter.cc
src/linter/antipattern/: duplicate_required_values.h
src/linter/desugar/: exclusive_maximum_integer_to_maximum.h  exclusive_minimum_integer_to_minimum.h
src/linter/implicit/: type_union_implicit.h
src/linter/include/sourcemeta/alterschema/: linter.h
src/linter/simplify/: dependent_required_tautology.h
test/: index.spec.js  jsonschema-2019-19-to-2020-12.json  jsonschema.spec.ts  transformer.spec.js  transformer.spec.ts  walker-jsonschema-2019-09.spec.ts  walkers.spec.js  walkers.spec.ts  xxx.spec.ts
test/engine/: CMakeLists.txt  bundle_test.cc  rule_test.cc  rules.h  transformer_test.cc
test/linter/: 2019_09_test.cc  2020_12_test.cc  CMakeLists.txt  draft0_test.cc  draft1_test.cc  draft2_test.cc  draft3_test.cc  draft4_test.cc  draft6_test.cc  draft7_test.cc  utils.h
test/packaging/find_package/: CMakeLists.txt  hello.cc
test/rules/: jsonschema-2019-09-to-2020-12.json  jsonschema-draft3-to-2019-09.json  jsonschema-draft3-to-2020-12.json  jsonschema-draft3-to-draft4.json  jsonschema-draft3-to-draft6.json  jsonschema-draft3-to-draft7.json  jsonschema-draft4-to-2019-09.json  jsonschema-draft4-to-2020-12.json  jsonschema-draft4-to-draft6.json  jsonschema-draft4-to-draft7.json  jsonschema-draft6-to-2019-09.json  jsonschema-draft6-to-2020-12.json  jsonschema-draft6-to-draft7.json  jsonschema-draft7-to-2019-09.json  jsonschema-draft7-to-2020-12.json
test/walkers/: jsonschema-2019-09.json  jsonschema-2020-12.json  jsonschema-draft4.json  jsonschema-draft6.json  runner.spec.js
walkers/: jsonschema-2019-09.json  jsonschema-2020-12.json  jsonschema-draft3.json  jsonschema-draft6.json
www/: app.js  dev.js  index.html  main.scss
