cmake_minimum_required(VERSION 3.18)
project(alterschema_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(AlterSchema REQUIRED)
add_executable(alterschema_hello hello.cc)
target_link_libraries(alterschema_hello PRIVATE sourcemeta::alterschema::engine)
target_link_libraries(alterschema_hello PRIVATE sourcemeta::alterschema::linter)
